version/0.4/_sources/examples/run_python_script/04_python_node_and_help.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/run_python_script/04_python_node_and_help.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_run_python_script_04_python_node_and_help.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_run_python_script_04_python_node_and_help.py:


.. _ref_python_node_and_help:

Python node and help
--------------------

This example demonstrates how to create workflow components and configure them.

It uses the ``python_node.py`` file to create a Python2 node.
and perform these tasks:

- Adds some source code.
- Adds and removes parameters and responses.
- Adds internal variables.

It then uses the ``python_help.py`` file to print which nodes are
available in the Python console. Lastly, it explains
how you can optionally save a copy of the project to a desired location.

.. GENERATED FROM PYTHON SOURCE LINES 22-25

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform the required imports.

.. GENERATED FROM PYTHON SOURCE LINES 25-29

.. code-block:: default


    from ansys.optislang.core import Optislang
    import ansys.optislang.core.examples as examples


.. GENERATED FROM PYTHON SOURCE LINES 30-33

Create optiSLang instance
~~~~~~~~~~~~~~~~~~~~~~~~~
Create the optiSLang instance.

.. GENERATED FROM PYTHON SOURCE LINES 33-37

.. code-block:: default


    osl = Optislang()
    print(osl)


.. GENERATED FROM PYTHON SOURCE LINES 38-42

Get paths of example scripts and run them
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Get the paths of the example scripts and then run
these scripts.

.. GENERATED FROM PYTHON SOURCE LINES 42-48

.. code-block:: default


    paths1 = examples.get_files("python_node")
    paths2 = examples.get_files("python_help")
    osl.run_python_file(paths1[0])
    print(osl.run_python_file(paths2[0]))


.. GENERATED FROM PYTHON SOURCE LINES 49-59

Optionally save project
~~~~~~~~~~~~~~~~~~~~~~~
If you want to save the project to some desired
location, uncomment and edit these lines:

.. code:: python

  path = r'<insert-desired-location>'
  osl.save_as(os.path.join(path, "test_project.opf"))


.. GENERATED FROM PYTHON SOURCE LINES 61-64

Stop and cancel project
~~~~~~~~~~~~~~~~~~~~~~~
Stop and cancel the project.

.. GENERATED FROM PYTHON SOURCE LINES 64-67

.. code-block:: default


    osl.dispose()


.. GENERATED FROM PYTHON SOURCE LINES 68-76

View generated workflow
~~~~~~~~~~~~~~~~~~~~~~~
This image shows the generated workflow.

.. image:: ../../_static/04_python_node_and_help.png
 :width: 300
 :alt: Result of script.



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.000 seconds)


.. _sphx_glr_download_examples_run_python_script_04_python_node_and_help.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 04_python_node_and_help.py <04_python_node_and_help.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 04_python_node_and_help.ipynb <04_python_node_and_help.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
