version/0.6/_sources/examples/run_python_script/04_python_node_and_help.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/run_python_script/04_python_node_and_help.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_run_python_script_04_python_node_and_help.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_run_python_script_04_python_node_and_help.py:


.. _ref_python_node_and_help:

Python node and help
--------------------

This example demonstrates how to create workflow components and configure them.

It uses the ``python_node.py`` file to create a Python2 node.
and perform these tasks:

- Adds some source code.
- Adds and removes parameters and responses.
- Adds internal variables.

It then uses the ``python_help.py`` file to print which nodes are
available in the Python console. Lastly, it explains
how you can optionally save the project to a desired location.

.. GENERATED FROM PYTHON SOURCE LINES 44-47

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform the required imports.

.. GENERATED FROM PYTHON SOURCE LINES 47-51

.. code-block:: Python


    from ansys.optislang.core import Optislang
    import ansys.optislang.core.examples as examples


.. GENERATED FROM PYTHON SOURCE LINES 52-55

Create optiSLang instance
~~~~~~~~~~~~~~~~~~~~~~~~~
Create the optiSLang instance.

.. GENERATED FROM PYTHON SOURCE LINES 55-59

.. code-block:: Python


    osl = Optislang(ini_timeout=60)
    print(osl)


.. GENERATED FROM PYTHON SOURCE LINES 60-64

Get paths of example scripts and run them
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Get the paths of the example scripts and then run
these scripts.

.. GENERATED FROM PYTHON SOURCE LINES 64-70

.. code-block:: Python


    paths1 = examples.get_files("python_node")
    paths2 = examples.get_files("python_help")
    osl.application.project.run_python_file(paths1[0])
    print(osl.application.project.run_python_file(paths2[0]))


.. GENERATED FROM PYTHON SOURCE LINES 71-81

Optionally save project
~~~~~~~~~~~~~~~~~~~~~~~
If you want to save the project to some desired
location, uncomment and edit these lines:

.. code:: python

  path = r'<insert-desired-location>'
  osl.application.save_as(os.path.join(path, "test_project.opf"))


.. GENERATED FROM PYTHON SOURCE LINES 83-86

Stop and cancel project
~~~~~~~~~~~~~~~~~~~~~~~
Stop and cancel the project.

.. GENERATED FROM PYTHON SOURCE LINES 86-89

.. code-block:: Python


    osl.dispose()


.. GENERATED FROM PYTHON SOURCE LINES 90-98

View generated workflow
~~~~~~~~~~~~~~~~~~~~~~~
This image shows the generated workflow.

.. image:: ../../_static/04_python_node_and_help.png
 :width: 300
 :alt: Result of script.



.. _sphx_glr_download_examples_run_python_script_04_python_node_and_help.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 04_python_node_and_help.ipynb <04_python_node_and_help.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 04_python_node_and_help.py <04_python_node_and_help.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
